apps/k8s/auto/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
  namespace: auto
spec:
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
