apps/k8s/auto/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-n8n
  namespace: auto
spec:
  stripPrefix:
    prefixes:
      - /n8n
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-heimdal-ingress
  namespace: auto
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auto-strip-n8n@kubernetescrd
spec:
  rules:
  - host: yggdrasil.rip
    http:
      paths:
      - path: /n8n
        pathType: Prefix
        backend:
          service:
            name: n8n-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: auto
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    external-dns.alpha.kubernetes.io/hostname: n8n.drip.yggdrasil.rip
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
spec:
  # This section tells Kubernetes "This domain uses this secret for SSL"
  tls:
  - hosts:
    - n8n.drip.yggdrasil.rip
    secretName: n8n-tls-secret
  rules:
  - host: "n8n.drip.yggdrasil.rip"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-svc
            port:
              number: 80
